--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                 <div class="Objectif-projets">
                                     <h1 class="sous-titre-objectifs">Objectif du projet</h1>
                                     <p class="texte-objectif">Création d'un site vitrine qui présente me projets et compétences dans le développement informatique</p>
-                                    <a href="https://github.com/ldesperrois/essaye.png" target="_blank" class="lien-github">Lien Github</a>
+                                    <a href="https://github.com/ldesperrois/PortFolio_Desperrois" target="_blank" class="lien-github">Lien Github</a>
                                 </div>
                                 <div class="apparition-texte">
                                     
