--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                     <h3 class="sous-titre-card">Projets associés : </h3>
                                     <div class="divs-card-texte">
                                         <a class="lien-compétences-projets" data-target="Docker">Installation poste</a>
-                                        <a class="lien-compétences-projets">Installation Réseau</a>
+                                        <a class="lien-compétences-projets" data-target="Réseau">Installation Réseau</a>
                                     </div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                     <h3 class="sous-titre-card">Projets associés : </h3>
                                     <div class="divs-card-texte">
                                         <a class="lien-compétences-projets" data-target="Koh_Sport">Koh sport</a>
-                                        <a class="lien-compétences-projets" >Gestion projet</a>
+                                        <a class="lien-compétences-projets"  data-target="gestion_projet">Gestion projet</a>
                                         
                 
                                     </div>
