Modification des conteneurs apparitions'

--- a/index.html
+++ b/index.html
@@ -277,16 +277,21 @@
                             <div class="conteneur-apparition">
                                 <div class="div-titre-apparition">
                                     <h1 class="apparition-titre texte-change">KOH SPORT</h1>
+                                    <a target="_blank" href="https://github.com/ldesperrois/Website" class="github"><img src="src/images/icons8-github-94.png" ></a>
                                     <i class="fa-sharp fa-solid fa-xmark  buton-apparition"></i>
                                 </div>
                                 <div class="image-apparition">
-                                    
-                                    <img src="src/images/koh_sport.png" class="image_special">
-                                </div>
-                                <div class="Objectif-projets">
-                                    <h1 class="sous-titre-objectifs">Objectif du projet</h1>
-                                    <p class="texte-objectif">Conception d'un Site Vitrine à partir des besoins et exigences d'un client.</p>
-                                    <a href="https://ldesperrois.github.io/Website/" target="_blank" class="lien-github">Lien Site</a>
+                                    <div class="div-apparitions-image">
+                                        <img src="src/images/koh_sport.png" class="image_special">
+                                    </div>
+                                    <div class="div-apparitions-texte">
+                                        <h1 class="sous-titre-objectifs">Objectif du projet</h1>
+                                        <p class="texte-objectif">Conception d'un Site Vitrine à partir des besoins et exigences d'un client.</p>
+                                        <div class="preuve">
+                                            <h1 class="sous-titre-objectifs">Lien Site : </h2>
+                                             <a href="" class="" target="_blank"><img src="src/images/icons8-lien-64.png" ></a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apparition-texte">
                                     
