compressage de la vidéo pour un site moins lourd

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a href="#aproposdemoi" class="bouton_accueil"></a>
                     
                 </div>
-                <video autoplay="autoplay" muted="" loop="infinite" src="src/vidéo/AdobeStock_528999121.mov"></video>
+                <video autoplay="autoplay" muted="" loop="infinite" src="src/vidéo/da96c35b-9414-440d-959d-69960b24edcd.mp4"></video>
             </header>
             <main>
                 <section id="aproposdemoi" class="section-présentation" >
