changement d'un lien dans la page web

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div class="conteneur-apparition">
                                 <div class="div-titre-apparition">
                                     <h1 class="apparition-titre texte-change">KOH SPORT</h1>
-                                    <a target="_blank" href="https://github.com/ldesperrois/Website" class="github"><img class="image-github" src="src/images/icons8-github-94.png" ></a>
+                                    <a target="_blank" href="https://ldesperrois.github.io/Website/" class="github"><img class="image-github" src="src/images/icons8-github-94.png" ></a>
                                     <i class="fa-sharp fa-solid fa-xmark  buton-apparition"></i>
                                 </div>
                                 <div class="image-apparition">
