--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Comme:wght@200&family=Iceland&family=Jost:wght@300&display=swap" rel="stylesheet">
             <script src="https://code.jquery.com/jquery-3.6.4.js"></script>  
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
             <script src="src/app.js"></script>
             
             <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
