--- a/index.html
+++ b/index.html
@@ -821,23 +821,32 @@
             <footer class="contact" id="contacte">
                 <h1 class="titre-contact">Contactez moi</h1>
                 <div class="contient">
-                    <div class="lesreseaux">
+                    <form class="lesreseaux" id="myform" >
                         <h2 class="titre-reseaux"> Mail </h2>
                         <div class="formulaire-contact">
                             <div class="modal-input">
-                                <input type="text" placeholder="Nom" id="fullName" required/> 
+                                <input type="text" placeholder="Nom" id="fullName" /> 
+                                <div class="nom">
+                                    <p>Votre nom est vide</p>
+                                </div>
                             </div>
                             <div class="modal-input">
-                                <input type="email"  placeholder="Email" id="email_id" required/>
+                                <input   placeholder="Email" id="email_id" />
+                                <div class="email">
+                                    <p>Email non conforme</p>
+                                </div>
                             </div>
                             <div class="message-modal-input">
-                                <textarea placeholder="Message" id="message" required ></textarea>
+                                <textarea placeholder="Message" id="message" ></textarea>
+                                <div class="message">
+                                    <p>Votre message est vide</p>
+                                </div>
                             </div>
                             <div class="formulaire-bouton">
-                                <button class="bouton_contact" id="contacto" onclick="SendMail()" required>Send</button>
+                                <button type="submit" class="bouton_contact" id="contacto" onclick="envoyerEmail()" >Send</button>
                             </div>
                         </div>
-                    </div>
+                    </form>
                     
                     <div class="lesreseaux2">
                         <div class="decalage-reseau">
